# Intro_to_plume_models

./: .gitignore  README.md  analytical_plume_gen.py  full_plume.py  plume_environment.yml  pyproject.toml
.ipynb_checkpoints/: BPT_intro-checkpoint.ipynb
example_profiles/: linear.csv  real_profile.csv  unstratified.csv
jupyter_notebooks/: BPT_intro.ipynb
jupyter_notebooks/.ipynb_checkpoints/: BPT_intro-checkpoint.ipynb
plume_model_code/: analytical_plume_gen.py
